# udo

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: authenticate.rs  backend.rs  cache.rs  cli.rs  config.rs  elevate.rs  error.rs  main.rs  output.rs  pam.rs  run.rs  user.rs
src/authenticate/: pam.rs
src/backend/: system.rs  testing.rs  vfs.rs
src/output/: confirm.rs  prompt.rs  theme.rs
src/run/: env.rs  process.rs  shell.rs
