[package]
name = "udo"
description = "A modern replacement for sudo/doas"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["cargo"] }
crossterm = "0.29.0"
nix = { version = "0.30.1", features = ["fs", "hostname", "process", "signal", "term", "time", "user"] }
pam-sys = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
