[package]
name = "udo"
description = "A modern replacement for sudo/doas"
authors = ["Emma Alexandria <emma.jellemabutler@gmail.com>"]
repository = "https://github.com/emmalexandria/udo"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["cargo"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
nix = { version = "0.30.1", features = [
  "fs",
  "hostname",
  "process",
  "signal",
  "term",
  "time",
  "user",
] }
pam-sys = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
